[project]
name = "agent-llm-mock"
version = "0.1.0"
description = "Local LLM mock server (OpenAI + Anthropic) with web dashboard for manual response control"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-llm-mock = "agent_llm_mock:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
